	PR ld/10144 	* elfxx-mips.c (_bfd_mips_elf_check_relocs) 	[R_MIPS_32, R_MIPS_REL32, R_MIPS_64]: Ignore relocs from 	SEC_DEBUGGING sections.